--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -10,13 +10,13 @@
       = render "modals/login"
       
     = render "layouts/navbar"
-    %div.container.body
+    %div.container.body{ style: ("background-color: transparent; padding: 0px;" if hide_background) }
       - flash.each do |key, value|
         = content_tag(:div, value, class: "alert alert-#{key}")
       = yield
     :javascript
       var iph_off = #{!params[:iph].nil?};
-      var viewed_help = #{get_viewed_help};
+      var viewed_help = #{get_viewed_help.to_json};
       var all_help = #{get_all_help.to_json};
       var mark_read_url = '#{mark_read_url}';
       var mark_help_read_url = '#{mark_help_read_url}';
@@ -63,6 +63,7 @@
         } catch(err) {
           log("No interval to clear");
         }
+        $(".fadein").fadeIn(1000);
         ping_interval = setInterval(function(){ log(visit_url); ping(visit_url) }, 10000);
       });
     
