--- a/app/views/pages/about.html.haml
+++ b/app/views/pages/about.html.haml
@@ -1,12 +1,9 @@
-:css
-  .container.body { background-color: transparent; padding-top: 0px; }
-
 .aboutcontainer
   .aboutbox
     .aboutheader
-      %img{:src => "https://s3.amazonaws.com/moonlite-nsdub/static/stoney+100x150.png", alt: "Stoney"}
+      %img{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/stoney+100x150.png", alt: "Stoney"}
         %span Prove yourself.
-    %hr{:style => "margin:0"}
+    %hr{ style: "margin:0"}
       .aboutbody
         %h4 Our Philosophy
         %p
@@ -18,11 +15,11 @@
           Think about it: would you rather travel down a path all by yourself, uncertain of who you're taking advice from and the kind of progress you're making, or would you rather have proof of what you know, and have access to guidance from the most reputable people?
         %h4 Our Team
         %p
-          %a{:href => "/jonathankirst"}> Jonathan Kirst
+          %a{ href: "/jonathankirst"}> Jonathan Kirst
           \:
           %span Devout Ruby on Rails hacker and PHP refugee. Unapologetic fanatic of San Francisco food, beer and all things Pac-12. You can find him at Thieves in the Mission if you want to lose a debate about SEC vs. Pac-12 football.
         %p
-          %a{:href => "/nathanielsokollward"}> Nathaniel Sokoll-Ward
+          %a{ href: "/nathanielsokollward"}> Nathaniel Sokoll-Ward
           \:
           %span Ethical hustler, and all around good dude. Ex-Googler and former Master of the Universe, now spending time working on his guitar chops, and developing a more nomadic lifestyle.
         %h4 Still want more?
