--- a/app/views/pages/challenges.html.haml
+++ b/app/views/pages/challenges.html.haml
@@ -1,12 +1,9 @@
-:css
-  .container.body { background-color: transparent; padding-top: 0px; }
-  
 .aboutcontainer{style:"width:703px;"}
   .aboutbox
     .aboutheader
-      %img{:src => "https://s3.amazonaws.com/moonlite-nsdub/static/stoney+100x150.png", alt: "Stoney"}
+      %img{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/stoney+100x150.png", alt: "Stoney"}
         %span MetaBright Challenges
-    %hr{:style => "margin:0"}
+    %hr{ style: "margin:0" }
       .aboutbody{style:"padding-left:2px;"}
         - @personas.each do |persona|
           %h4= persona.name
@@ -24,6 +21,6 @@
                       %h5 Coming Soon!
                 %div 
                   = image_tag path.path_pic, class: "mosaic-backdrop", style: "display:inline;", size: "140x140", alt: "#{path.name}"
-          %hr{:style => "margin:0"}
+          %hr{ style: "margin:0"}
                     
                 
