--- a/app/views/pages/intro.html.haml
+++ b/app/views/pages/intro.html.haml
@@ -1,10 +1,4 @@
-:css
-  .body.container { background-color: transparent; padding-top: 0px; }
-
-:javascript
-  $(function(){ $(".intro_wrapper").fadeIn(1000); });
-
-.intro_wrapper.hide
+.intro_wrapper.hide.fadein
   .intro
     .header
       = image_tag STONEY_MEDIUM_URL, style: "width:42px; height:47px; margin:4px 4px 0 0;", alt: "Stoney"
