--- a/app/views/newsfeed/_post.html.haml
+++ b/app/views/newsfeed/_post.html.haml
@@ -23,7 +23,7 @@
                   %div{ style: "padding: 3px 0px; margin:0;"}
                     %ul.profile_dropdown{ style: "list-style: none; margin: 0px; padding: 0; min-width: 120px;"}
                       %li{ style: "margin-left:-8px; "}= link_to "Edit Submission", take_section_path(post.section.id, task_id: post.task_id), style: "padding:0; padding-left:8px;"
-                      %li= link_to "Delete Submission", retract_submission_path(post.id), remote: true, confirm: "Are you sure you want to delete your submission?", class: "retract_link", style: "padding:0;"
+                      %li{style: "text-align:center;"}= link_to "Delete Submission", retract_submission_path(post.id), remote: true, confirm: "Are you sure you want to delete your submission?", class: "retract_link", style: "padding:0;"
           - else
             = link_to vote_task_path(post.task.id, sa_id: post.submitted_answer.id), remote: true, class: ("btn vote_button " + (feed.votes.include?(post.submitted_answer.id) ? "btn-info" : "")) do
               %img{ src: ICON_UPVOTE_URL, alt: "Up-vote" }
