style changes on image crs

--- a/app/views/sections/take.html.haml
+++ b/app/views/sections/take.html.haml
@@ -28,7 +28,7 @@
           - if @task.task?           
             %h4{ style: "margin-bottom: 0px; font-size: 17px; border-bottom: 1px solid rgba(0, 0, 0, .1); width: 310px; margin-right: auto; margin-left: auto;" } Provide proof you completed this Task:
           -else
-            %h4{ style: "margin-bottom: 0px; font-size: 14px;" } Your answer
+            %h4{ style: "margin-bottom: 12px; font-size: 17px; border-bottom: 1px solid rgba(0, 0, 0, .1); width: 104px; margin-right: auto; margin-left: auto;" } Your answer:
     
           %input{ type: "hidden", name: "url", value: @submitted_answer.url }
           %input{ type: "hidden", name: "content", value: @submitted_answer.content }
@@ -43,8 +43,9 @@
             
             - elsif @task.image?
               %div.input{ style: "margin-left: 0px; " }
-                %input#answer_input{ type: "text", name: "image_url", style: "width: 300px;", placeholder: "Copy & paste link to image URL here...", autofocus: "autofocus" }
-                %a#answer_preview_button.btn.secondary{ style: "margin-left: 10px; position:relative; bottom:5px;" } Preview
+                %input#answer_input{ type: "text", name: "image_url", style: "width: 300px; margin-bottom:5px;", placeholder: "Copy & paste link to image URL here...", autofocus: "autofocus" }
+                %a#answer_preview_button.btn.secondary{ style: "margin-left: 10px; position:relative; bottom:2px;" } Preview
+                %div{ style: "font-size:14px; margin-bottom:-6px;"} or
                 = render "stored_resources/new_image"
                 %div#answer_preview_container{ style: "padding: 10px; margin: 20px 0 0 0; border: 1px solid lightgray;" }
                   %div#answer_preview{ style: "text-align: center;" }
