--- a/app/assets/stylesheets/revolution.css
+++ b/app/assets/stylesheets/revolution.css
@@ -338,6 +338,7 @@ h1, h2, h3, h4, h5, h6, p, div, span, a { font-family: 'MuliRegular'; font-weigh
 .single_pane { padding: 15px; background-color: white; border-radius: 4px; min-height: 400px;}
 .pills a { line-height: 23px; cursor: pointer }
 ul.inlinedisplay div.mosaic-block.bar2 { height: 130px; }
+.overview td { text-align: center; border: 1px solid #DDD; width: 80px; }
 
 /* Footer/Revolution */
 .footer{ height:20px; margin-bottom: 6px; text-align:center; color:#8D8D8D; position: relative; bottom: 0; width:100%; }
