--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -56,6 +56,30 @@
       
       $(".modal_close").click(function(){ $(this).parents('.modal').modal('hide'); });
       
+      // http://stackoverflow.com/questions/6140632/how-to-handle-tab-in-textarea
+      // Slightly modified - changed insertion of '\t' to double space
+      $("textarea").keydown(function(e) {
+        if(e.keyCode === 9) { // tab was pressed
+            // get caret position/selection
+            var start = this.selectionStart;
+            var end = this.selectionEnd;
+    
+            var $this = $(this);
+            var value = $this.val();
+    
+            // set textarea value to: text before caret + tab + text after caret
+            $this.val(value.substring(0, start)
+                        + "  "
+                        + value.substring(end));
+    
+            // put caret at right position again (add one for the tab)
+            this.selectionStart = this.selectionEnd = start + 2;
+    
+            // prevent the focus lose
+            e.preventDefault();
+        }
+      });
+      
       $(function(){ 
         init_iph();
         try { 
