--- a/app/views/newsfeed/_feed.html.haml
+++ b/app/views/newsfeed/_feed.html.haml
@@ -32,6 +32,10 @@
     );
     
     $(".reload").click(function(){ $(this).parent().find("iframe").attr("src", $(this).parent().find("iframe").attr("src")); });
+    
+    $('iframe').load(function() {
+      this.style.height = this.contentWindow.document.body.offsetHeight + 'px';
+    });
 
   = render partial: "newsfeed/post", collection: feed.posts, locals: { feed: feed }
   
