--- a/app/views/newsletters/newsletter_XXXXXX.html.haml
+++ b/app/views/newsletters/newsletter_XXXXXX.html.haml
@@ -64,7 +64,28 @@
                     %span{ style: "font-size: 16px; font-weight:bold; margin:0;"} New Challenge!
                     %span{ style: "font-size: 16px; font-weight:normal"} Ruby / Rails Testing
                     %p{ style: "margin:3px 0 4px 0;"} 6 questions
-                    %p{ style: "margin:0;"} Much like a slum-lord or a prohibition-era gangster, the Ruby / Rails Tester is steeped in a seedy underworld. 
+                    %p{ style: "margin:0;"} Much like a slum-lord or a prohibition-era gangster, the Ruby / Rails Tester is steeped in a seedy underworld.
+              = link_to "http://www.metabright.com/challenges/jquery", style: s[:challenge_box] do
+                %div{ style: "margin-bottom:5px; padding:12px; "}                
+                  %img{ src: "http://moonlite.s3.amazonaws.com/objs/68/original.png?1354911643", height: 75, width:75, style: s[:challenge_image], title: "jQuery" }
+                  %div{ style: "display:inline-block; margin-left:10px; width:84%;"}
+                    %h4{ style: "font-size: 16px; margin:0; font-weight:normal"} jQuery
+                    %p{ style: "margin:3px 0 4px 0;"} 25 questions
+                    %p{ style: "margin:0;"} Making the Internet do cool stuff with the most popular JavaScript library in existence.
+              = link_to "http://www.metabright.com/challenges/excelformulasandfunctions", style: s[:challenge_box] do
+                %div{ style: "margin-bottom:5px; padding:12px; "}                
+                  %img{ src: "http://moonlite.s3.amazonaws.com/objs/55/original.jpg?1353948550", height: 75, width:75, style: s[:challenge_image], title: "Excel" }
+                  %div{ style: "display:inline-block; margin-left:10px; width:84%;"}
+                    %h4{ style: "font-size: 16px; margin:0; font-weight:normal"} Excel: Formulas and Functions
+                    %p{ style: "margin:3px 0 4px 0;"} 19 questions
+                    %p{ style: "margin:0;"} Take your sensitivity tested, pivot table possessing, color coded, 10^7 row spreadsheet skills and show everyone what you can do.
+              = link_to "http://www.metabright.com/challenges/rubygems", style: s[:challenge_box] do
+                %div{ style: "margin-bottom:5px; padding:12px; "}
+                  %img{ src: "http://moonlite.s3.amazonaws.com/objs/74/original.png?1354916814", height: 75, width:75, style: s[:challenge_image], title: "RubyGems" }
+                  %div{ style: "display:inline-block; margin-left:10px; width:84%;"}
+                    %h4{ style: "font-size: 16px; margin:0; font-weight:normal"} RubyGems
+                    %p{ style: "margin:3px 0 4px 0;"} 21 questions
+                    %p{ style: "margin:0;"} For Gem authors and Gem users. Gems might be simple to use, but this Challenge certainly isn't.
         %tr
           %td{ style: "padding:3px 12px 6px;"}
             %span{style:"font-size:10px; color:gray;"}
